--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
   We don't have a dynamic loader yet, so this is not yet usable.
   added readv, sigdelset, sigaltstack, sigfillset, sigismember, usleep,
     vsprintf, writev, all by Olaf.
+  imported readdir fix from Guillaume.  Mhh, can the kernel interface
+    really be this broken?
 
 0.6.14:
   *scanf did not append the 0 byte for %s.
