Found a kludge to autodetect whether the kernel includes define struct stat64 and define __NO_STAT64 accordingly.

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,9 @@
     vsprintf, writev, all by Olaf.
   imported readdir fix from Guillaume.  Mhh, can the kernel interface
     really be this broken?
+  Found a kludgy way to detect whether the kernel includes define struct
+    stat64 (they also define STAT64_HAS_BROKEN_ST_INO).  If this does
+    not work for you, please tell me!
 
 0.6.14:
   *scanf did not append the 0 byte for %s.
