--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@
   Fixed stdio line buffering.  The code was already there but I forgot
     to mark stdio and stdout as line buffered.  This should really be
     done dynamically using isatty, though.
+  Removed superfluous "if (1)" in execvp.c
 
 0.6.14:
   *scanf did not append the 0 byte for %s.
