--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.7.1:
-  optimized away the static array from __ltostr and __lltostr.
-  system by Olaf.
+  optimized away the static arrays from __ltostr and __lltostr.
+  optimized away the static arrays (and more!) from strtoul and strtoull.
+  added system (by Olaf).
 
 0.7:
   clone support for i386,alpha,arm and sparc by Olaf.
