documented Olaf's changes.

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
   added system (by Olaf).
   added tolower and toupper
   added getopt from Olaf (~600 bytes on x86!)
+  added clone for mips (by Olaf).
+  fixed longjmp and setjmp on sparc not to require glibc include files.
 
 0.7:
   clone support for i386,alpha,arm and sparc by Olaf.
