--- a/CHANGES
+++ b/CHANGES
@@ -7,10 +7,11 @@
   added clone for mips (by Olaf).
   fixed longjmp and setjmp on sparc not to require glibc include files.
   added pause for all (by Olaf).
-  added isupper and islower.
   added __attribute__ ((__const__)) to ctype.h
+  added isupper and islower.
   added putc and putchar as macros.
-  added strcasecmp and strncasecmp.
+  added strcasecmp and strncasecmp (thanks to Abraham vd Merwe for
+    insightful discussions and patches I partially used for the last three)
 
 0.7:
   clone support for i386,alpha,arm and sparc by Olaf.
