--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.7.2:
+  added several prototypes to already implemented functions and
+    <sys/reboot.h>.  Thanks for Abraham for pointing this out.
+
 0.7.1:
   optimized away the static arrays from __ltostr and __lltostr.
   optimized away the static arrays (and more!) from strtoul and strtoull.
