--- a/CHANGES
+++ b/CHANGES
@@ -16,11 +16,12 @@
     lzop and bzip2.
   added mktime, asctime_r, asctime and ctime (needed for gzip).
   Someone will need to implement a reader for the glibc localtime file
-    format some day :-(
+    format some day (man tzfile, ugh!) :-(
   added unlink prototype to unistd.h.
   added gmtime and gmtime_r.
-  fixed sparc unified syscall error handling.
+  fixed sparc unified syscall error handling (please upgrade!).
   removed readdir glibc compatibility cruft.
+  removed stat glibc compatibility cruft.
 
 0.7.1:
   optimized away the static arrays from __ltostr and __lltostr.
