new reboot() from Olaf.

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.7.3:
   vsnprintf(0,...) estimated the length of strings with a padding width
     incorrectly.
+  new reboot() from Olaf.
 
 0.7.2:
   added several prototypes to already implemented functions and
