--- a/CHANGES
+++ b/CHANGES
@@ -3,8 +3,8 @@
     incorrectly.
   new reboot() from Olaf.
   added prototypes for getsockopt and setsockopt.
+  added experimental sem* and shm*
   define EXIT_SUCCESS and EXIT_FAILURE
-  added experimental sem*
 
 0.7.2:
   added several prototypes to already implemented functions and
