--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,9 @@
   added prototypes for getsockopt and setsockopt.
   added experimental sem* and shm*
   define EXIT_SUCCESS and EXIT_FAILURE
+  added setvbuf (only changes mode, not buffer)
+  added dietwarning.h (woohoo, linker warnings!) and used it to warn
+    on setvbuf, sprintf and vsnprintf.
 
 0.7.2:
   added several prototypes to already implemented functions and
