several stdio fixes courtesy to the S-Lang test suite.

--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,8 @@
   added popen() and pclose().  Now the diet libc can link slsh (from
     S-Lang!)
   corrected usleep.  It was more of an msleep until now.
+  corrected __dtostr (it looped when trying to format "0.0").
+  several fixes to stdio (thanks to S-Lang's excellent test suite!)
 
 0.7.2:
   added several prototypes to already implemented functions and
