added gethostbyname (DNS only so far).  Don't look at the code, though.

--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,8 @@
   corrected __dtostr (it looped when trying to format "0.0").
   several fixes to stdio (thanks to S-Lang's excellent test suite!)
   added ungetc (does it work?)
+  added inet_aton (yuck!)
+  added gethostbyname
 
 0.7.2:
   added several prototypes to already implemented functions and
