--- a/CHANGES
+++ b/CHANGES
@@ -24,7 +24,8 @@
   added h_errno and __h_errno_location
   added inet_ntoa
   added setpgrp and getpgrp, strsignal and execv (thanks, Olaf)
-  add bcopy macro
+  add bcopy, index, rindex macros
+  add isgraph and isxdigit
 
 0.7.2:
   added several prototypes to already implemented functions and
