found a bug in gmtime_r in case of a leap year... added missing tm_yday fill schould be fixed...

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@
   add bcopy, index, rindex macros
   add isgraph and isxdigit
   add strftime (ugh!!!)
+  Olaf fixed strftime, gmtime_r leap year bug.
 
 0.7.2:
   added several prototypes to already implemented functions and
