--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,9 @@
   add isgraph and isxdigit
   add strftime (ugh!!!)
   Olaf fixed strftime, gmtime_r leap year bug.
+  Jeff Garzik contributed a spec file.  I put it in contrib and hope
+    everbody knows what to do with it...
+  Olaf checked in a ton of libpthread stuff.
 
 0.7.2:
   added several prototypes to already implemented functions and
