add large file backwards compatibility, so programs with large file support can optionally work on 2.2 and 2.0 kernels, too (i.e. gzip ;-})

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,8 @@
     everbody knows what to do with it...
   Olaf checked in a ton of libpthread stuff.
   added mkstemp using /dev/urandom (harder to guess than getpid()).
+  add large file backwards compatibility support (so gzip will run on
+    kernel 2.2 and 2.0)
 
 0.7.2:
   added several prototypes to already implemented functions and
