--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,7 @@
   added mkstemp using /dev/urandom (harder to guess than getpid()).
   add large file backwards compatibility support (so gzip will run on
     kernel 2.2 and 2.0)
+  added shutdown
 
 0.7.2:
   added several prototypes to already implemented functions and
