--- a/CHANGES
+++ b/CHANGES
@@ -40,6 +40,7 @@
     isupper -> __isupper_ascii etc).  So, for example, liblatin1 can
     overwrite the default is* functions.
   added liblatin1.a
+  added tzfile implementation (does it work for anyone else?)
 
 0.7.2:
   added several prototypes to already implemented functions and
