so now the pthread_attr access functions are complete. (and hopefully functional as man-page said)

--- a/libpthread/CHANGES
+++ b/libpthread/CHANGES
@@ -4,7 +4,7 @@ Written from scratch by Olaf Dreesen.
 Mon Mar 12 16:16:00 CET 2001
 
 first of all:
-  I strongly suggest NOT to use it yet is very, very,... very highly
+  I strongly suggest NOT to use it yet, it's very, very, ... very
   experimental. I guess you got the point. there is still much debug code,
   incomplete functions and unusable states....
 
