oops, trivial fix for initgroups.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.8.1:
+  fixed initgroups (oops)
+
 0.8:
   vsnprintf(0,...) estimated the length of strings with a padding width
     incorrectly.
