added tcdrain (posix defines this as a cancel-point ...) added testand set for sparc (hope it works)
now I'll go to the uni to check those f..king kernel headers (hopefully find
a suitable workaround for arm and sparc ... (*grumble*))

--- a/libpthread/CHANGES
+++ b/libpthread/CHANGES
@@ -16,3 +16,13 @@ first of all:
 
   I'm still working on the final alpha...
 
+Fri Mar 23 14:09:54 MET 2001
+
+arg.. the kernel-header are so inconsistent...
+on x86 it works on arm and sparc not due to MISSING defines, miss-places
+includes and __KERNEL__ checks....
+the best in this category is that the kernel-header are changed that the
+buggy (g)libc haven't to change... (f..k glibc, the headers HAVE to be
+CONSISTENT)
+a public defined symbol on arch X have to be in Y to unless marked...
+that is mainly speaking SCHED.H ! arg....
