clean up append file open for stdio and fix vfprintf.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 0.8.1:
   fixed initgroups (oops)
+  Cleanup appending file open for stdio (thanks, James Antill)
+  imported vfprintf fix from James Antill.
 
 0.8:
   vsnprintf(0,...) estimated the length of strings with a padding width
