add fnmatch change index, rindex and bcmp as weak ELF symbols (were #defined before)

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@
   fixed initgroups (oops)
   Cleanup appending file open for stdio (thanks, James Antill)
   imported vfprintf fix from James Antill.
+  add fnmatch
+  change index, rindex and bcmp as weak ELF symbols (were #defined before)
 
 0.8:
   vsnprintf(0,...) estimated the length of strings with a padding width
