add alloca to stdlib.h and have diet include stdlib

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
   Put object and library files into a separate directory (bin-$ARCH).
   Add "cross" make target to make all architectures.
   Add "diet" program and man page.
+  Add getgrnam, getgrgid
 
 0.8:
   vsnprintf(0,...) estimated the length of strings with a padding width
