--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,7 @@
   Add "cross" make target to make all architectures.
   Add "diet" program and man page.
   Add getgrnam, getgrgid
+  Add cfmakeraw (Thanks, Antonio Musumeci)
 
 0.8:
   vsnprintf(0,...) estimated the length of strings with a padding width
