--- a/TODO
+++ b/TODO
@@ -3,3 +3,8 @@
 fscanf
 
 getnameinfo
+
+vsnprintf return value should be the number of needed characters instead
+of the (truncated) number of characters that were actually written.
+
+strtol and friends need overflow handling.
