--- a/diet.1
+++ b/diet.1
@@ -13,7 +13,7 @@ line you specify and try to mangle it so that gcc will compile against
 the diet libc header files and link against the diet libc itself.
 
 diet tries to be smart for cross compiling.  If the first argument is
-not gcc but sparc-linux-gcc, divine will guess that you want to cross
+not gcc but sparc-linux-gcc, diet will guess that you want to cross
 compile for sparc and use bin-sparc/dietlibc.a instead of the dietlibc.a
 for your default architecture.
 .SH AUTHOR
