import <scsi/*> from glibc.

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
   add "%*s" and "%*.*s" support to vsnprintf.
   add putchar (apparently arm-linux-gcc will substitute printf("\n")
     with putchar('\n') behind your back...?!
+  import include/scsi/ from glibc.
 
 0.9:
   fixed initgroups (oops)
