--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
   add putchar (apparently arm-linux-gcc will substitute printf("\n")
     with putchar('\n') behind your back...?!
   import include/scsi/ from glibc.
+  add iopl.
 
 0.9:
   fixed initgroups (oops)
