add getopt_long stuff to getopt.h (there is no implementation of getopt_long in the diet libc, but stuff will at least compile now.  Link against GNU getopt to get getopt_long).
add sigdelset prototype.

--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,8 @@
     with putchar('\n') behind your back...?!
   import include/scsi/ from glibc.
   add iopl.
-  add execl prototype.
+  add execl and sigdelset prototypes.
+  add getopt_long stuff to getopt.h (may compile but won't link).
 
 0.9:
   fixed initgroups (oops)
