add rpc headers (from glibc, slightly fixed so they don't clash with the other headers)

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
   add iopl.
   add execl and sigdelset prototypes.
   add getopt_long stuff to getopt.h (may compile but won't link).
+  add RPC headers (no code yet).
 
 0.9:
   fixed initgroups (oops)
