imported an amazing amount of utterly broken Sun code. I spent several hours trying to clean up as much of the code as I could watch without intense bodily pain.  I found at least one piece of code that should seg-fault randomly without my clean-up.  Sun must die.

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,10 @@
   add getopt_long stuff to getopt.h (may compile but won't link).
   add RPC headers (no code yet).
   add mlockall, munlockall
+  make "diet gcc foo.c" work.
+  added Sun RPC code and removed as many warnings as possible in a
+    heroic act of self-mutilation.
+  added getproto* and getdtablesize for the RPC cruft :-(
 
 0.9:
   fixed initgroups (oops)
