--- a/TODO
+++ b/TODO
@@ -8,3 +8,5 @@ vsnprintf return value should be the number of needed characters instead
 of the (truncated) number of characters that were actually written.
 
 strtol and friends need overflow handling.
+
+XDR (rfc1014.txt)
