--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@
   added getpass.  mount from util-linux actually compiles now!
   fix the sig*set routines.  mount actually works now *bg*
   fix fwrite dividing by zero when trying to fwrite n records of size 0.
+  added an initial regex implementation (3500 bytes!!!).
 
 0.9:
   fixed initgroups (oops)
