--- a/CHANGES
+++ b/CHANGES
@@ -19,6 +19,8 @@
   fix fwrite dividing by zero when trying to fwrite n records of size 0.
   added an initial regex implementation (3500 bytes!!!).
   add llseek and lseek64 with optional lseek fall-back.
+  add res_init.
+  add asprintf (ugh, what an ugly function).
 
 0.9:
   fixed initgroups (oops)
