--- a/CHANGES
+++ b/CHANGES
@@ -22,7 +22,8 @@
   add res_init.
   add asprintf (ugh, what an ugly function).
   expanded arpa/nameser.h to include backwards compatibility defines
-  added ut_name alias to ut_host in struct utmp.
+  add ut_name alias to ut_host in struct utmp.
+  add inet_ntop, inet_pton, gethostbyname2.
 
 0.9:
   fixed initgroups (oops)
