--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@
   add inet_ntop, inet_pton, gethostbyname2.
   add sysinfo, recvmsg, sendmsg.
   add endmntent, getmntent, setmntent.
+  fix fnmatch (thanks, Guillaume Cottenceau!)
 
 0.9:
   fixed initgroups (oops)
